# optimization

./: pyproject.toml  readme.md
projects/dispersion/: facility_dispersion.ipynb
projects/dispersion/data/: data_100_10.json  data_25_5.json  data_300_15.json
projects/dynamic_lots/: dynamic_lot_size.ipynb  input_wagner.csv
projects/portfolio/: mad.ipynb
projects/time_indexed/: jssp_time_indexed.ipynb  time_indexed.ipynb
projects/time_indexed/data/: random_10_10.json  random_10_8.json  random_3_4.json  random_5_6.json  random_6_8.json  random_8_10.json  random_8_6.json  random_8_8.json  random_generator.py
projects/transportation/: input_transp.json  transportation.ipynb
