[tool.poetry]
name = "optimization"
version = "0.1.0"
description = "small optimization library project tests"
authors = ["Kevin Slader"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pyomo = "^6.8.0"
jupyterlab = "^4.2.5"
ortools = "^9.11.4210"
scipy = "^1.14.1"
highspy = "^1.7.2"
networkx = "^3.3"
plotly = "^5.24.1"
matplotlib = "^3.9.2"

[tool.poetry.group.data.dependencies]
yfinance = "^0.2.48"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
